# topic-pred

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/: README.md
notebooks/: topic_prediction_training_refactored.ipynb
scripts/: run_predict_example.py
src/topic_pred/: __init__.py  defaults.py  predict_template.py
src/topic_pred/utils/: __init__.py  io.py  predict_method.py  preprocess_methods.py
