[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topic-pred"
version = "0.0.0"
description = "Topic prediction utilities"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy<2,>=1.21",
  "pandas>=1.3",
  "scikit-learn>=1.2",
  "sentence-transformers>=2.0",
  "joblib>=1.0",
  "pydantic>=1.8",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["topic_pred"]
